--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -58,12 +58,12 @@ main .container {
 .navbar__items svg {
     display: none;
 }
-.announcementBar_node_modules-\@docusaurus-theme-classic-lib-next-theme-AnnouncementBar-styles-module {
+.announcementBar_3WsW {
     height:auto !important;
     min-height:50px;
     display: flex;
 }
-.announcementBar_node_modules-\@docusaurus-theme-classic-lib-next-theme-AnnouncementBar-styles-module div {
+.announcementBar_3WsW div {
     display:flex;
     justify-content: center;
     align-items: center;
@@ -103,18 +103,18 @@ aside .menu__list li.menu__list-item li.menu__list-item {
     font-weight: 500;
 }
 @media only screen and (max-width: 600px) {
-    .announcementBar_node_modules-\@docusaurus-theme-classic-lib-next-theme-AnnouncementBar-styles-module div{
+    .announcementBar_3WsW div{
         margin:auto;      
   }
-    .announcementBar_node_modules-\@docusaurus-theme-classic-lib-next-theme-AnnouncementBar-styles-module div, .announcementBar_node_modules-\@docusaurus-theme-classic-lib-next-theme-AnnouncementBar-styles-module .link{
+    .announcementBar_3WsW div, .announcementBar_3WsW .link{
     font-size: .8rem !important;}
   }
 
   @media only screen and (max-width: 315px) {
-    .announcementBar_node_modules-\@docusaurus-theme-classic-lib-next-theme-AnnouncementBar-styles-module div{
+    .announcementBar_3WsW div{
   display: block;  
   }
-  .announcementBar_node_modules-\@docusaurus-theme-classic-lib-next-theme-AnnouncementBar-styles-module .link {
+  .announcementBar_3WsW .link {
  display: block;
   }
   }
