--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,11 +1,15 @@
 /* stylelint-disable docusaurus/copyright-header */
+
+
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
  * work well for content-centric websites.
  */
 
+
 /* You can override the default Infima variables here. */
+
 :root {
   --ifm-color-primary: #5c17e6;
   --ifm-color-primary-dark: rgb(33, 175, 144);
@@ -29,30 +33,56 @@ html[data-theme='dark'] .docusaurus-highlight-code-line {
 }
 
 main .container {
-  padding:2rem  ;
+  padding: 2rem;
 }
-.docs-wrapper, .navbar__inner {
-  width:100%;
+
+.docs-wrapper,
+.navbar__inner {
+  width: 100%;
   max-width: 1400px;
-  margin:0 auto;
+  margin: 0 auto;
 }
+
 
 .navbar__title {
   font-size: 1.8rem;
-  font-family: poppins;
+  font-family: 'Poppins', arial, sans-serif;
   font-weight: 500;
   letter-spacing: -1px;
 }
 
 * {
-  font-family: poppins;
-
+  font-family: 'Poppins', arial, sans-serif;
 }
+
 .navbar__items svg {
-  display:none;
+  display: none;
 }
+.announcementBar_3WsW {
+  height:auto !important;
+  min-height:50px;
+  display: flex;
+}
+.announcementBar_3WsW div {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.1rem !important;
+}
+.link {background:#fafbfc !important;
+  border-radius: 4px;
+  padding:2px 10px;
+  margin:8px 6px;
+  color:#5c17e6 !important;
+  font-weight: 700;
+  font-size: 1rem ;
 
-.h1Heading_node_modules-\@docusaurus-theme-classic-lib-next-theme-Heading-styles-module, h2, h3, h4 {
+  text-decoration: none !important;
+}
+.h1Heading_node_modules-\@docusaurus-theme-classic-lib-next-theme-Heading-styles-module,
+h2,
+h3,
+h4 {
   font-size: 1.6rem !important;
   letter-spacing: -.4px;
   font-weight: 600;
@@ -61,15 +91,30 @@ main .container {
 h2 {
   font-size: 1.1rem !important;
 }
+
 aside .menu__list li.menu__list-item {
   padding: 6px 0;
   font-weight: 700;
 }
 
-aside .menu__list li.menu__list-item li.menu__list-item{
+aside .menu__list li.menu__list-item li.menu__list-item {
   padding: 0;
   font-size: .8rem;
   font-weight: 500;
 }
+@media only screen and (max-width: 600px) {
+  .announcementBar_3WsW div{
+    margin:auto;
+  }
+  .announcementBar_3WsW div, .announcementBar_3WsW .link{
+    font-size: .8rem !important;}
+}
 
-
+@media only screen and (max-width: 315px) {
+  .announcementBar_3WsW div{
+    display: block;
+  }
+  .announcementBar_3WsW .link {
+    display: block;
+  }
+}
