--- a/src/components/HomepageFeatures.module.css
+++ b/src/components/HomepageFeatures.module.css
@@ -1,13 +1,227 @@
 /* stylelint-disable docusaurus/copyright-header */
 
+.flexCentered {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .features {
   display: flex;
   align-items: center;
   padding: 2rem 0;
   width: 100%;
+  height: 100%;
+}
+
+.contentContainer {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.bottomRow {
+}
+
+.welcomeTitleContainer {
+  height: 5rem;
+}
+
+.welcomeTitle {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 3rem;
+  line-height: 4rem;
+  width: 100%;
+}
+
+@media screen and (max-width: 966px) {
+  .welcomeTitle {
+    font-size: 2rem;
+    line-height: 3rem;
+  }
+}
+
+.featureCard {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  flex-direction: row;
+  display: flex;
+  background: #ffffff;
+  min-height: 15rem;
+  transition: all 0.2s;
+  position: relative;
+  top: 0px;
+
+  text-decoration: none !important;
+  color: #000;
+}
+
+.featureCard:hover {
+  top: -10px;
+  text-decoration: none !important;
+  color: #000;
+}
+
+.featureTitle {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 36px;
+}
+
+.featureContent {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 22px;
+}
+
+.featureSvgContainer {
+  margin-left: 1rem;
 }
 
 .featureSvg {
-  height: 200px;
-  width: 200px;
+  width: 150px;
+}
+
+.subFeatureCard {
+  min-height: 10rem;
+}
+
+.subFeatureSvgContainer {
+  margin-left: 1.5rem;
+}
+
+.subFeatureSvg {
+  width: 75px;
+}
+
+.subFeatureTitle {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+}
+
+.subFeatureContent {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+
+  line-height: 22px;
+}
+
+.infoContainer {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.subscribeContainer {
+  justify-content: flex-start;
+}
+
+.subscribeLabel {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 14px;
+  color: #000000;
+  opacity: 0.6;
+}
+
+.subscribeInputRow {
+  margin-top: 1rem;
+  width: 25rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.subscribeInputContainer {
+  flex: 1;
+  height: 100%;
+  display: flex;
+}
+
+.subscribeInput {
+  width: 98%;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  padding-left: 10px;
+}
+
+.subscribeInput:focus {
+  outline: none !important;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 5px #7733ff;
+}
+
+.socialContainer {
+  display: flex;
+}
+
+.socialSvgContainer {
+  background-size: 24px;
+  background-repeat: no-repeat;
+}
+
+.socialSvgContainer:hover {
+  transform: scale(1.2);
+}
+
+.twitterLogoSocial {
+  background-image: url("../../static/img/landing/twitter_logo.svg");
+}
+
+.twitterLogoSocial:hover {
+  background-image: url("../../static/img/landing/twitter_logo_hover.svg");
+}
+
+.telegramLogoSocial {
+  background-image: url("../../static/img/landing/telegram_logo.svg");
+}
+
+.telegramLogoSocial:hover {
+  background-image: url("../../static/img/landing/telegram_logo_hover.svg");
+}
+
+.mediumLogoSocial {
+  background-image: url("../../static/img/landing/medium_logo.svg");
+}
+
+.mediumLogoSocial:hover {
+  background-image: url("../../static/img/landing/medium_logo_hover.svg");
+}
+
+.discordLogoSocial {
+  background-image: url("../../static/img/landing/discord_logo.svg");
+}
+
+.discordLogoSocial:hover {
+  background-image: url("../../static/img/landing/discord_logo_hover.svg");
+}
+
+.socialButton {
+  height: 24px;
+  width: 24px;
+}
+
+.subcribeButton {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 14px;
 }
