--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,110 +1,110 @@
 /* stylelint-disable docusaurus/copyright-header */
 
-
 /**
  * Any CSS included here will be global. The classic template
  * bundles Infima by default. Infima is a CSS framework designed to
  * work well for content-centric websites.
  */
 
-
 /* You can override the default Infima variables here. */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap");
 
 :root {
-    --ifm-color-primary: #5c17e6;
-    --ifm-color-primary-dark: rgb(33, 175, 144);
-    --ifm-color-primary-darker: rgb(31, 165, 136);
-    --ifm-color-primary-darkest: rgb(26, 136, 112);
-    --ifm-color-primary-light: rgb(70, 203, 174);
-    --ifm-color-primary-lighter: rgb(102, 212, 189);
-    --ifm-color-primary-lightest: rgb(146, 224, 208);
-    --ifm-code-font-size: 95%;
+  --ifm-color-primary: #5c17e6;
+  --ifm-color-primary-dark: rgb(33, 175, 144);
+  --ifm-color-primary-darker: rgb(31, 165, 136);
+  --ifm-color-primary-darkest: rgb(26, 136, 112);
+  --ifm-color-primary-light: rgb(70, 203, 174);
+  --ifm-color-primary-lighter: rgb(102, 212, 189);
+  --ifm-color-primary-lightest: rgb(146, 224, 208);
+  --ifm-code-font-size: 95%;
 }
 
 .docusaurus-highlight-code-line {
-    background-color: rgba(0, 0, 0, 0.1);
-    display: block;
-    margin: 0 calc(-1 * var(--ifm-pre-padding));
-    padding: 0 var(--ifm-pre-padding);
+  background-color: rgba(0, 0, 0, 0.1);
+  display: block;
+  margin: 0 calc(-1 * var(--ifm-pre-padding));
+  padding: 0 var(--ifm-pre-padding);
 }
 
-html[data-theme='dark'] .docusaurus-highlight-code-line {
-    background-color: rgba(0, 0, 0, 0.3);
+html[data-theme="dark"] .docusaurus-highlight-code-line {
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 main .container {
-    padding: 2rem;
+  padding: 2rem;
 }
 
 .docs-wrapper,
 .navbar__inner {
-    width: 100%;
-    max-width: 1400px;
-    margin: 0 auto;
+  width: 100%;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
-
 .navbar__title {
-    font-size: 1.8rem;
-    font-family: 'Poppins', arial, sans-serif;
-    font-weight: 500;
-    letter-spacing: -1px;
+  font-size: 1.8rem;
+  font-family: "Poppins", arial, sans-serif;
+  font-weight: 500;
+  letter-spacing: -1px;
 }
 
 * {
-    font-family: 'Poppins', arial, sans-serif;
+  font-family: "Poppins", arial, sans-serif;
 }
 
 .navbar__items svg {
-    display: none;
+  display: none;
 }
 
-
-div[role=banner]{
-    height:auto !important;
-    min-height:50px;
-    display: flex;
+div[role="banner"] {
+  height: auto !important;
+  min-height: 50px;
+  display: flex;
 }
-div[role=banner] div {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.1rem !important;
+div[role="banner"] div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.1rem !important;
 }
-.link {background:#fafbfc !important;
-    border-radius: 4px;
-    padding:2px 10px;
-    margin:8px 6px;
-    color:#5c17e6 !important;
-    font-weight: 700;
-    font-size: 1rem ;
+.link {
+  background: #fafbfc !important;
+  border-radius: 4px;
+  padding: 2px 10px;
+  margin: 8px 6px;
+  color: #5c17e6 !important;
+  font-weight: 700;
+  font-size: 1rem;
 
-    text-decoration: none !important;
-    }
+  text-decoration: none !important;
+}
 
 aside .menu__list li.menu__list-item {
-    padding: 6px 0;
-    font-weight: 700;
+  padding: 6px 0;
+  font-weight: 700;
 }
 
 aside .menu__list li.menu__list-item li.menu__list-item {
-    padding: 0;
-    font-size: .8rem;
-    font-weight: 500;
+  padding: 0;
+  font-size: 0.8rem;
+  font-weight: 500;
 }
 @media only screen and (max-width: 600px) {
-    div[role=banner] div{
-        margin:auto;      
+  div[role="banner"] div {
+    margin: auto;
   }
-  div[role=banner] div, div[role=banner] .link{
-    font-size: .8rem !important;}
+  div[role="banner"] div,
+  div[role="banner"] .link {
+    font-size: 0.8rem !important;
   }
+}
 
-  @media only screen and (max-width: 315px) {
-    div[role=banner] div{
-  display: block;  
+@media only screen and (max-width: 315px) {
+  div[role="banner"] div {
+    display: block;
   }
-  div[role=banner] .link {
- display: block;
+  div[role="banner"] .link {
+    display: block;
   }
-  }
+}
