feat: fo-992: update navbar max width

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -38,7 +38,7 @@ main .container {
 .docs-wrapper,
 .navbar__inner {
   width: 100%;
-  max-width: 1400px;
+  /* max-width: 1400px; */
   margin: 0 auto;
 }
 
