feat: fo-1010: update images on landing page

--- a/src/components/HomepageFeatures.module.css
+++ b/src/components/HomepageFeatures.module.css
@@ -88,16 +88,12 @@
 }
 
 .subFeatureCard {
-  min-height: 10rem;
-  max-height: 10rem;
+  /* min-height: 10rem; */
+  /* max-height: 10rem; */
 }
 
 .subFeatureSvgContainer {
   margin-left: 1.5rem;
-}
-
-.subFeatureSvg {
-  width: 75px;
 }
 
 .subFeatureTitle {
