--- a/src/components/SubscribeForm/index.module.css
+++ b/src/components/SubscribeForm/index.module.css
@@ -9,11 +9,16 @@
 
 .subscribeInputRow {
   margin-top: 1rem;
-  width: 25rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+
+@media screen and (min-width: 966px) {
+  .subscribeInputRow {
+    width: 25rem;
+  }
 }
 
 .subscribeInputContainer {
