fix: merge main (#183)
* REfactor homepage (#164) (#167)

* Release 0.1.0 (#171)

* Refactor homepage (#164)
* feat: fo-1003: fix the apply button and adjust sub feature position (#169)
* Fixed broken links (#170)

* Develop (#176)

* Refactor homepage (#164)

* fix a few broken links (#158)

* feat: fo-1003: fix the apply button and adjust sub feature position (#169)

* Fixed broken links (#170)

* change the fn build method to musl  (#168)

* change the build method to musl and update the develop branch

* fix Dockerfile name bug

* update github url

* feat: fo-993: subscribe to mail chimp (#157)

* feat: fo-993: basic mailchimp integration

* feat: fo-993: finish mailchimp integration (using free demo account)

* feat: fo-993: update mailchimp url with the one from Findora subscribe form

* generate .env file on the fly

* add url parameter

* debug env file generate

* fix secret

* One more developers page: how to setup personal devnet in local (#165)

* added local devnet tutorial to Wiki

* add dependencies and prereqs

* add note about binaries in cargo bin

* add some tips for mac

* TM tech spec, latex, confidential xfr updates (#173)

* minor text edits (#175)

* Docs/new images (#179)

* Add new images

* fix main branch build issue (#180)

Co-authored-by: Tanmay Bhattacharya <tanmay.bhattacharya.smit@gmail.com>
Co-authored-by: David <dlin128@users.noreply.github.com>
Co-authored-by: Jimmy Sun <75454104+jimmysun0815@users.noreply.github.com>

--- a/src/components/SubscribeForm/index.module.css
+++ b/src/components/SubscribeForm/index.module.css
@@ -9,6 +9,7 @@
 
 .subscribeInputRow {
   margin-top: 1rem;
+  width: 25rem;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
