--- a/src/components/SubscribeForm/index.module.css
+++ b/src/components/SubscribeForm/index.module.css
@@ -15,24 +15,35 @@
   align-items: center;
 }
 
-@media screen and (min-width: 966px) {
+/* @media screen and (min-width: 966px) {
   .subscribeInputRow {
     width: 25rem;
   }
-}
+} */
 
 .subscribeInputContainer {
   flex: 1;
   height: 100%;
   display: flex;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+
+  padding: 0.5rem;
+  background-color: white;
+
+  padding-right: 5px;
+  padding-left: 5px;
+  max-width: 15rem;
 }
 
 .subscribeInput {
-  width: 98%;
   background: #ffffff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  border: 1px solid transparent;
+
   border-radius: 8px;
   padding-left: 10px;
+  margin-right: 5px;
+  width: 90%;
 }
 
 .subscribeInput:focus {
@@ -47,17 +58,33 @@
   font-weight: 500;
   font-size: 14px;
   line-height: 14px;
+  opacity: 0.8;
+
+  padding: 0;
+  width: 36px;
+  height: 32px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.subcribeButton:hover {
+  background-color: #7733ff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  opacity: 0.6;
+  transform: scale(1.1);
+  transition: all 0.3s;
+}
+.subcribeButton:disabled {
+  opacity: 0.3;
 }
 
 .subscribeLabel {
   font-family: "Poppins";
   font-style: normal;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 14px;
-  color: #000000;
-  opacity: 0.6;
-  text-align: center;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 22px;
 }
 
 .mcAlert {
