feat: fo-1013: add some fixes related to the responsivenes and layout structure

--- a/src/components/SubscribeForm/index.module.css
+++ b/src/components/SubscribeForm/index.module.css
@@ -36,6 +36,11 @@
   max-width: 15rem;
 }
 
+@media screen and (max-width: 966px) {
+  .subscribeInputContainer {
+    max-width: 20rem;
+  }
+}
 .subscribeInput {
   background: #ffffff;
   border: 1px solid transparent;
